--- a/async-web/build.gradle
+++ b/async-web/build.gradle
@@ -30,8 +30,8 @@ repositories {
 
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile 'org.springframework.boot:spring-boot-starter-web',
+            'org.apache.httpcomponents:httpasyncclient'
 }
 
 
